--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,6 @@
   "Перевод": "Translate",
   "Язык": "English",
   "Главная": "Main",
-  "О сайте": "About"
+  "О сайте": "About",
+  "Страница не найдена": "Page not found"
 }
