--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,6 @@
   "Перевод": "Перевод",
   "Язык": "Русский",
   "Главная": "Главная",
-  "О сайте": "О сайте"
+  "О сайте": "О сайте",
+  "Страница не найдена": "Страница не найдена"
 }
