--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,8 @@
   "Язык": "Русский",
   "Главная": "Главная",
   "О сайте": "О сайте",
-  "Страница не найдена": "Страница не найдена"
+  "Страница не найдена": "Страница не найдена",
+  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+  "Обновить страницу": "Обновить страницу",
+  "Создать ошибку": "Создать ошибку"
 }
