--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,6 @@
   "Страница не найдена": "Page not found",
   "Произошла непредвиденная ошибка": "Something went wrong",
   "Обновить страницу": "Refresh the page",
-  "Создать ошибку": "Throw error"
+  "Создать ошибку": "Throw error",
+  "Переключить": "Toggle"
 }
