--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,6 @@
   "Произошла непредвиденная ошибка": "Something went wrong",
   "Обновить страницу": "Refresh the page",
   "Создать ошибку": "Throw error",
-  "Переключить": "Toggle"
+  "Переключить": "Toggle",
+  "Короткий язык": "En"
 }
