--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,6 @@
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Обновить страницу": "Обновить страницу",
   "Создать ошибку": "Создать ошибку",
-  "Переключить": "Переключить"
+  "Переключить": "Переключить",
+  "Короткий язык": "Рус"
 }
