--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,6 @@
   "Обновить страницу": "Обновить страницу",
   "Создать ошибку": "Создать ошибку",
   "Переключить": "Переключить",
-  "Короткий язык": "Рус"
+  "Короткий язык": "Рус",
+  "Войти": "Войти"
 }
