create Input component, create login form

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,5 +9,7 @@
   "Создать ошибку": "Создать ошибку",
   "Переключить": "Переключить",
   "Короткий язык": "Рус",
-  "Войти": "Войти"
+  "Войти": "Войти",
+  "Пароль": "Пароль",
+  "Логин": "Логин"
 }
