--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,7 @@
   "Создать ошибку": "Throw error",
   "Переключить": "Toggle",
   "Короткий язык": "En",
-  "Войти": "Log in"
+  "Войти": "Log in",
+  "Пароль": "Password",
+  "Логин": "Login"
 }
