add login module, create Text component, add disabled props to Button, create login and user slices, create asyncthunk, change navbar, add stories

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,8 @@
   "Короткий язык": "En",
   "Войти": "Log in",
   "Пароль": "Password",
-  "Логин": "Login"
+  "Логин": "Login",
+  "Форма авторизации": "Authorization form",
+  "Неверный логин или пароль": "Invalid username or password",
+  "Выйти": "Log out"
 }
