--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,5 +11,8 @@
   "Короткий язык": "Рус",
   "Войти": "Войти",
   "Пароль": "Пароль",
-  "Логин": "Логин"
+  "Логин": "Логин",
+  "Форма авторизации": "Форма авторизации",
+  "Неверный логин или пароль": "Неверный логин или пароль",
+  "Выйти": "Выйти"
 }
