create useAppDispatch hook, fix open modal window on log out, add profile, optimization render

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,5 +14,6 @@
   "Логин": "Login",
   "Форма авторизации": "Authorization form",
   "Неверный логин или пароль": "Invalid username or password",
-  "Выйти": "Log out"
+  "Выйти": "Log out",
+  "Профиль": "Profile"
 }
