--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -14,5 +14,6 @@
   "Логин": "Логин",
   "Форма авторизации": "Форма авторизации",
   "Неверный логин или пароль": "Неверный логин или пароль",
-  "Выйти": "Выйти"
+  "Выйти": "Выйти",
+  "Профиль": "Профиль"
 }
