update entities profile, add save, edit, cancel, add readonly mode, add private routes, create ui select, country select, currency select, avatar

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -2,5 +2,15 @@
   "Профиль": "Profile",
   "Редактировать": "Edit",
   "Имя": "Firstname",
-  "Фамилия": "Lastname"
+  "Фамилия": "Lastname",
+  "Отменить": "Cancel",
+  "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
+  "Попробуйте обновить страницу": "Попробуйте обновить страницу",
+  "Сохранить": "Save",
+  "Возраст": "Age",
+  "Страна": "Country",
+  "Город": "City",
+  "Валюта": "Currency",
+  "Аватар": "Avatar",
+  "Имя пользователя": "Username"
 }
