--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,5 +15,7 @@
   "Форма авторизации": "Authorization form",
   "Неверный логин или пароль": "Invalid username or password",
   "Выйти": "Log out",
-  "Профиль": "Profile"
+  "Профиль": "Profile",
+  "Валюта": "Currency",
+  "Страна": "Country"
 }
