--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,5 +15,7 @@
   "Форма авторизации": "Форма авторизации",
   "Неверный логин или пароль": "Неверный логин или пароль",
   "Выйти": "Выйти",
-  "Профиль": "Профиль"
+  "Профиль": "Профиль",
+  "Валюта": "Валюта",
+  "Страна": "Страна"
 }
