--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -2,5 +2,15 @@
   "Профиль": "Профиль",
   "Редактировать": "Редактировать",
   "Имя": "Имя",
-  "Фамилия": "Фамилия"
+  "Фамилия": "Фамилия",
+  "Отменить": "Отменить",
+  "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
+  "Попробуйте обновить страницу": "Попробуйте обновить страницу",
+  "Сохранить": "Сохранить",
+  "Возраст": "Возраст",
+  "Страна": "Страна",
+  "Город": "Город",
+  "Валюта": "Валюта",
+  "Аватар": "Аватар",
+  "Имя пользователя": "Имя пользователя"
 }
