add profile form validation, add codes validation errors, add translates, fix form edit

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -12,5 +12,10 @@
   "Город": "City",
   "Валюта": "Currency",
   "Аватар": "Avatar",
-  "Имя пользователя": "Username"
+  "Имя пользователя": "Username",
+  "Серверная ошибка": "Server error",
+  "Некорректный регион": "Invalid region",
+  "Некорректный возраст": "Incorrect age",
+  "Имя и фамилия обязательны": "First and last name are required",
+  "Данные не указаны": "No data"
 }
