--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -12,5 +12,10 @@
   "Город": "Город",
   "Валюта": "Валюта",
   "Аватар": "Аватар",
-  "Имя пользователя": "Имя пользователя"
+  "Имя пользователя": "Имя пользователя",
+  "Серверная ошибка": "Серверная ошибка",
+  "Некорректный регион": "Некорректный регион",
+  "Некорректный возраст": "Некорректный возраст",
+  "Имя и фамилия обязательны": "Имя и фамилия обязательны",
+  "Данные не указаны": "Данные не указаны"
 }
