add ArticlesPage, ArticlesDetailsPage, update Sidebar, update webpack config

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -17,5 +17,6 @@
   "Выйти": "Выйти",
   "Профиль": "Профиль",
   "Валюта": "Валюта",
-  "Страна": "Страна"
+  "Страна": "Страна",
+  "Статьи": "Статьи"
 }
