add comment list, create slice, commentsAdapter, asyncThunk, create useInitialEffect hook

--- a/public/locales/en/article-details.json
+++ b/public/locales/en/article-details.json
@@ -1,4 +1,6 @@
 {
   "Статья не найдена": "Article not found",
-  "Произошла ошибка при загрузке статьи": "Произошла ошибка при загрузке статьи"
+  "Произошла ошибка при загрузке статьи": "Произошла ошибка при загрузке статьи",
+  "Комментарии": "Comments",
+  "Комментарии отсутствуют": "No comments"
 }
