add comment form, user profiles

--- a/public/locales/en/article-details.json
+++ b/public/locales/en/article-details.json
@@ -2,5 +2,7 @@
   "Статья не найдена": "Article not found",
   "Произошла ошибка при загрузке статьи": "Произошла ошибка при загрузке статьи",
   "Комментарии": "Comments",
-  "Комментарии отсутствуют": "No comments"
+  "Комментарии отсутствуют": "No comments",
+  "Введите текст комментария": "Enter comment text",
+  "Отправить": "Send"
 }
