--- a/public/locales/en/article-details.json
+++ b/public/locales/en/article-details.json
@@ -4,5 +4,6 @@
   "Комментарии": "Comments",
   "Комментарии отсутствуют": "No comments",
   "Введите текст комментария": "Enter comment text",
-  "Отправить": "Send"
+  "Отправить": "Send",
+  "Назад к списку": "Back to list"
 }
