create filter, sort, search, update slice, thunks, selectors, create useDebounce, addQueryParams hooks

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -1,3 +1,11 @@
 {
-  "Читать далее...": "Read more..."
+  "Читать далее...": "Read more...",
+  "возрастанию": "ASC",
+  "убыванию": "DESC",
+  "дате создания": "date",
+  "заголовку": "title",
+  "просмотрам": "views",
+  "Сортировать по": "Sort by",
+  "по": "by",
+  "Поиск": "Search"
 }
