--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -1,3 +1,11 @@
 {
-  "Читать далее...": "Читать далее..."
+  "Читать далее...": "Читать далее...",
+  "возрастанию": "возрастанию",
+  "убыванию": "убыванию",
+  "дате создания": "дате создания",
+  "заголовку": "заголовку",
+  "просмотрам": "просмотрам",
+  "Сортировать по": "Сортировать по",
+  "по": "по",
+  "Поиск": "Поиск"
 }
