--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -7,5 +7,10 @@
   "просмотрам": "views",
   "Сортировать по": "Sort by",
   "по": "by",
-  "Поиск": "Search"
+  "Поиск": "Search",
+  "Все": "All",
+  "ИТ": "It",
+  "Экономика": "Economic",
+  "Наука": "Science",
+  "Статьи не найдены": "Articles not found"
 }
