--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -7,5 +7,10 @@
   "просмотрам": "просмотрам",
   "Сортировать по": "Сортировать по",
   "по": "по",
-  "Поиск": "Поиск"
+  "Поиск": "Поиск",
+  "Все": "Все",
+  "ИТ": "ИТ",
+  "Экономика": "Экономика",
+  "Наука": "Наука",
+  "Статьи не найдены": "Статьи не найдены"
 }
