--- a/public/locales/en/article-details.json
+++ b/public/locales/en/article-details.json
@@ -5,5 +5,6 @@
   "Комментарии отсутствуют": "No comments",
   "Введите текст комментария": "Enter comment text",
   "Отправить": "Send",
-  "Назад к списку": "Back to list"
+  "Назад к списку": "Back to list",
+  "Рекомендуем": "Recommend"
 }
