--- a/public/locales/ru/article-details.json
+++ b/public/locales/ru/article-details.json
@@ -5,5 +5,6 @@
   "Комментарии отсутствуют": "Комментарии отсутствуют",
   "Введите текст комментария": "Введите текст комментария",
   "Отправить": "Отправить",
-  "Назад к списку": "Назад к списку"
+  "Назад к списку": "Назад к списку",
+  "Рекомендуем": "Рекомендуем"
 }
