add create and edit article page, add routes, add link to pages

--- a/public/locales/en/article-details.json
+++ b/public/locales/en/article-details.json
@@ -6,5 +6,6 @@
   "Введите текст комментария": "Enter comment text",
   "Отправить": "Send",
   "Назад к списку": "Back to list",
-  "Рекомендуем": "Recommend"
+  "Рекомендуем": "Recommend",
+  "Редактировать": "Edit"
 }
