--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,5 +18,7 @@
   "Профиль": "Profile",
   "Валюта": "Currency",
   "Страна": "Country",
-  "Статьи": "Articles"
+  "Статьи": "Articles",
+  "Создать статью": "Create article",
+  "ELIASXLII": "ELIASXLII"
 }
