--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -18,5 +18,8 @@
   "Профиль": "Профиль",
   "Валюта": "Валюта",
   "Страна": "Страна",
-  "Статьи": "Статьи"
+  "Статьи": "Статьи",
+  "ELIAS APP": "ELIAS APP",
+  "Создать статью": "Создать статью",
+  "ELIASXLII": "ELIASXLII"
 }
