fix import, add translations

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -12,5 +12,7 @@
   "ИТ": "It",
   "Экономика": "Economic",
   "Наука": "Science",
-  "Статьи не найдены": "Articles not found"
+  "Статьи не найдены": "Articles not found",
+  "Редактирование статьи": "Edit article",
+  "Создание новой статьи": "Create new article"
 }
