--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -12,5 +12,7 @@
   "ИТ": "ИТ",
   "Экономика": "Экономика",
   "Наука": "Наука",
-  "Статьи не найдены": "Статьи не найдены"
+  "Статьи не найдены": "Статьи не найдены",
+  "Редактирование статьи": "Редактирование статьи",
+  "Создание новой статьи": "Создание новой статьи"
 }
