--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,5 +20,7 @@
   "Страна": "Country",
   "Статьи": "Articles",
   "Создать статью": "Create article",
-  "ELIASXLII": "ELIASXLII"
+  "ELIASXLII": "ELIASXLII",
+  "Администратор": "Admin",
+  "У вас нет доступа к этой странице": "You don't have access to this page"
 }
