--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -21,5 +21,7 @@
   "Статьи": "Статьи",
   "ELIAS APP": "ELIAS APP",
   "Создать статью": "Создать статью",
-  "ELIASXLII": "ELIASXLII"
+  "ELIASXLII": "ELIASXLII",
+  "Администратор": "Администратор",
+  "У вас нет доступа к этой странице": "У вас нет доступа к этой странице"
 }
