create star rating, create rating entity

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -23,5 +23,8 @@
   "Создать статью": "Создать статью",
   "ELIASXLII": "ELIASXLII",
   "Администратор": "Администратор",
-  "У вас нет доступа к этой странице": "У вас нет доступа к этой странице"
+  "У вас нет доступа к этой странице": "У вас нет доступа к этой странице",
+  "Ваш отзыв": "Ваш отзыв",
+  "Отправить": "Отправить",
+  "Закрыть": "Закрыть"
 }
