--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -22,5 +22,8 @@
   "Создать статью": "Create article",
   "ELIASXLII": "ELIASXLII",
   "Администратор": "Admin",
-  "У вас нет доступа к этой странице": "You don't have access to this page"
+  "У вас нет доступа к этой странице": "You don't have access to this page",
+  "Ваш отзыв": "Your feedback",
+  "Отправить": "Send",
+  "Закрыть": "Close"
 }
