create article rating feature

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -25,5 +25,8 @@
   "У вас нет доступа к этой странице": "You don't have access to this page",
   "Ваш отзыв": "Your feedback",
   "Отправить": "Send",
-  "Закрыть": "Close"
+  "Закрыть": "Close",
+  "Оцените статью": "Rate the article",
+  "Оставьте свой отзыв о статье": "Leave your feedback about the article",
+  "Спасибо за оценку!": "Thank you for rating!"
 }
