--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -26,5 +26,8 @@
   "У вас нет доступа к этой странице": "У вас нет доступа к этой странице",
   "Ваш отзыв": "Ваш отзыв",
   "Отправить": "Отправить",
-  "Закрыть": "Закрыть"
+  "Закрыть": "Закрыть",
+  "Оцените статью": "Оцените статью",
+  "Оставьте свой отзыв о статье": "Оставьте свой отзыв о статье",
+  "Спасибо за оценку!": "Спасибо за оценку!"
 }
